deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: backend
spec:
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: golang-app
        image: ghcr.io/anotherdanger/go-k8s:1.0
        resources:
          requests:
            memory: "108Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
      - name: nginx-app
        image: nginx:latest
        resources:
          requests:
            memory: "28Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "256m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  labels:
    app.kubernetes.io/name: router
spec:
  rules:
  - host: belajark8s.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/v1/hello"
        backend:
          service:
            name: go-service
            port: 
              number: 8080
